Store last open file path for future sessions (#177)
* Store last open file path for future sessions

* Remove dialog service rcp

* Update java/bundles/org.eclipse.set.core/src/org/eclipse/set/core/dialogservice/DialogServiceImpl.java

Co-authored-by: TruongQuangSB <131350493+TruongQuangSB@users.noreply.github.com>

* Update java/bundles/org.eclipse.set.core/src/org/eclipse/set/core/configurationservice/UserConfigurationServiceImpl.java

Co-authored-by: TruongQuangSB <131350493+TruongQuangSB@users.noreply.github.com>

* Update java/bundles/org.eclipse.set.feature.validation/META-INF/MANIFEST.MF

Co-authored-by: TruongQuangSB <131350493+TruongQuangSB@users.noreply.github.com>

* Fix exception after opening export directory. Store export directory

* Fix attachments not being considered exports

* Fix NPE

---------

Co-authored-by: TruongQuangSB <131350493+TruongQuangSB@users.noreply.github.com>